<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.target.TargetFragment">

    <ImageView
        android:id="@+id/iv_target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/target"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="10dp"
        android:outlineAmbientShadowColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/iv_target"
        app:layout_constraintEnd_toEndOf="@id/iv_target"
        app:layout_constraintTop_toBottomOf="@id/iv_target">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_account_circle_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="82dp"
                android:text="@string/target_kalori"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="82dp"
                android:layout_marginTop="30dp"
                android:text="@string/konsumsi_kalori"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/sisa_kalori"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:text="@string/_0"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/konsumsi_kalori"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:text="@string/_0"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_akg"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/ubah_akg"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:src="@drawable/baseline_photo_camera_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.861"
        android:contentDescription="@string/tambah_target" />


</androidx.constraintlayout.widget.ConstraintLayout>